--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="./styles/baseStyles.css" />
   </head>
   <body>
-    <canvas id="starsCanvas"></canvas>
-    <canvas id="bgCanvas"></canvas>
-
-    <script src="./scripts/BgScript.js"></script>
-    <script src="./scripts/ParticleScript.js"></script>
-  </body>
+     <canvas id="gameCanvas" width="1280" height="717" style="border:solid 1px rgb(0, 23, 128)">
+        Your browser does not support HTML5 Canvas.
+    </canvas>
+    
+</body>
+<script src="./scripts/main.js"></script>
 </html>
